[gd_scene load_steps=20 format=3 uid="uid://cpvvigq77lb04"]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_y7xaj"]
[ext_resource type="Texture2D" uid="uid://vgaiacg6bml8" path="res://addons/tiny_swords/Tiny Swords (Update 010)/UI/Ribbons/Ribbon_Blue_3Slides.png" id="2_32woc"]
[ext_resource type="Texture2D" uid="uid://dym0qg77olw3f" path="res://addons/tiny_swords/Tiny Swords (Update 010)/UI/Buttons/Button_Blue.png" id="3_cwf56"]
[ext_resource type="Texture2D" uid="uid://b8dx14bmdh7s8" path="res://addons/tiny_swords/Tiny Swords (Update 010)/UI/Buttons/Button_Blue_Pressed.png" id="4_8xaf5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_618l0"]
texture = ExtResource("2_32woc")
texture_margin_left = 64.0
texture_margin_top = 16.0
texture_margin_right = 64.0
texture_margin_bottom = 24.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_6rdsj"]
font_names = PackedStringArray("Comic Sans MS")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_prrcv"]
font = SubResource("SystemFont_6rdsj")
font_size = 38
font_color = Color(0, 0, 0, 1)
outline_size = 10
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogiyx"]

[sub_resource type="SystemFont" id="SystemFont_6ecpv"]
font_names = PackedStringArray("Comic Sans MS")
font_weight = 999
font_stretch = 75

[sub_resource type="Theme" id="Theme_3oasd"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/fonts/font = SubResource("SystemFont_6ecpv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u58ra"]
texture = ExtResource("3_cwf56")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(8, 0, 48, 56)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l2n7m"]
texture = ExtResource("3_cwf56")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(8, 0, 48, 56)
modulate_color = Color(0.921569, 0.929412, 0.898039, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sxosn"]
texture = ExtResource("4_8xaf5")
texture_margin_left = 6.0
texture_margin_top = 8.0
texture_margin_right = 10.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(6, 4, 54, 54)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rbtmm"]
texture = ExtResource("2_32woc")
texture_margin_left = 64.0
texture_margin_top = 40.0
texture_margin_right = 64.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_8jdlh"]
font_names = PackedStringArray("Monospace")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_87kd0"]
font = SubResource("SystemFont_8jdlh")
font_size = 22
outline_color = Color(1, 1, 0, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 0.541176)

[sub_resource type="Animation" id="Animation_cnaqn"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(8.28212, 2),
"update": 0,
"values": [Color(0, 0, 0, 0.52549), Color(0, 0, 0, 0.839216)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.307786, 0.366022),
"update": 0,
"values": [Vector2(391, -78), Vector2(391, 59)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(336, 658), Vector2(336, 489)]
}

[sub_resource type="Animation" id="Animation_ok8pt"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.258816),
"update": 0,
"values": [Color(0, 0, 0, 0.52549), Color(0, 0, 0, 0.882353)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(391, -78), Vector2(391, 47)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(336, 584), Vector2(336, 381)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynjee"]
_data = {
"RESET": SubResource("Animation_cnaqn"),
"default": SubResource("Animation_ok8pt")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_y7xaj")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.52549)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -185.0
offset_top = -78.0
offset_right = 185.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_618l0")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -22.5
offset_right = 44.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_prrcv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiddlePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -51.0
offset_right = 133.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ogiyx")

[node name="GridContainer" type="GridContainer" parent="MiddlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -14.5
offset_right = 42.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2

[node name="main_menu_btn" type="Button" parent="MiddlePanel/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_3oasd")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_u58ra")
theme_override_styles/hover = SubResource("StyleBoxTexture_l2n7m")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sxosn")
text = "Main Menu"

[node name="restart_game_btn" type="Button" parent="MiddlePanel/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_3oasd")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_u58ra")
theme_override_styles/hover = SubResource("StyleBoxTexture_l2n7m")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sxosn")
text = "Restart"

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_rbtmm")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -40.5
offset_right = 128.0
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_87kd0")
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_87kd0")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_87kd0")
vertical_alignment = 1

[node name="MonstersLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
label_settings = SubResource("LabelSettings_87kd0")
horizontal_alignment = 2
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background")
libraries = {
"": SubResource("AnimationLibrary_ynjee")
}
autoplay = "RESET"

[connection signal="pressed" from="MiddlePanel/GridContainer/main_menu_btn" to="." method="main_menu_button"]
[connection signal="pressed" from="MiddlePanel/GridContainer/restart_game_btn" to="." method="restart_game"]
